Fixed an issue with forgot password on IE + medication page
Medication page wasn’t formatted right, fixed that/recolored things
Forgot password now fixed for IE
Added a new container for content

--- a/public/app/drugs/drug-list.scss
+++ b/public/app/drugs/drug-list.scss
@@ -1,5 +1,4 @@
 .md-drugs {
-    padding: 25px;
     
     h3 {
         text-transform: uppercase;
@@ -13,7 +12,7 @@
         width:33%;
 
         a {
-            color: $md-secondary-dark;
+            color: $md-primary;
         }
     }
 
